--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -2,10 +2,10 @@
 <package xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" packagerversion="1.4.1" version="2.0" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
   <name>tjSolrDoctrineBehaviorPlugin</name>
   <channel>pear.symfony-project.com</channel>
-  <summary>Your name here</summary>
-  <description>Your name here</description>
+  <summary>Thibault Jouannic</summary>
+  <description>The tjSolrDoctrineBehaviorPlugin provides a Doctrine behavior to easily index and search model objects in the Solr search engine</description>
   <lead>
-    <name>Your name here</name>
+    <name>Thibault Jouannic</name>
     <user>thibaultj</user>
     <email>thibault@jouannic.fr</email>
     <active>yes</active>
@@ -35,12 +35,29 @@
       <package>
         <name>symfony</name>
         <channel>pear.symfony-project.com</channel>
-        <min>1.2.0</min>
-        <max>1.3.0</max>
-        <exclude>1.3.0</exclude>
+        <min>1.3.0</min>
+        <max>1.5.0</max>
+        <exclude>1.5.0</exclude>
       </package>
     </required>
   </dependencies>
   <phprelease></phprelease>
-  <changelog></changelog>
+  <changelog>
+  <release>
+    <version>
+      <release>0.9.0</release>
+      <api>0.9.0</api>
+    </version>
+    <stability>
+     <release>beta</release>
+     <api>stable</api>
+    </stability>
+    <license uri="http://www.symfony-project.org/license">MIT license</license>
+    <date>2009-12-30</date>
+    <license>MIT</license>
+    <notes>
+      * First public release
+    </notes>
+  </release>
+  </changelog>
 </package>
