--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -2,7 +2,7 @@
 <package xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" packagerversion="1.4.1" version="2.0" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
   <name>tjSolrDoctrineBehaviorPlugin</name>
   <channel>pear.symfony-project.com</channel>
-  <summary>Thibault Jouannic</summary>
+  <summary>Doctrine behavior for indexing content with Solr</summary>
   <description>The tjSolrDoctrineBehaviorPlugin provides a Doctrine behavior to easily index and search model objects in the Solr search engine</description>
   <lead>
     <name>Thibault Jouannic</name>
