--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -45,6 +45,24 @@
   <changelog>
   <release>
     <version>
+      <release>1.0.0</release>
+      <api>1.0.0</api>
+    </version>
+    <stability>
+     <release>stable</release>
+     <api>stable</api>
+    </stability>
+    <license uri="http://www.symfony-project.org/license">MIT license</license>
+    <date>2010-01-17</date>
+    <license>MIT</license>
+    <notes>
+      * Update documentation
+      * Update startup scripts so index and logs go in the good sf directory
+    </notes>
+  </release>
+  </changelog>
+  <release>
+    <version>
       <release>0.9.0</release>
       <api>0.9.0</api>
     </version>
