update readme and package to match last changes

--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -58,6 +58,8 @@
     <notes>
       * Update documentation
       * Update startup scripts so index and logs go in the good sf directory
+      * Refactor some code, and split the tests files
+      * Rewrite unit tests to use lime2
     </notes>
   </release>
   </changelog>
