update readme and package

--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -60,6 +60,7 @@
       * Update startup scripts so index and logs go in the good sf directory
       * Refactor some code, and split the tests files
       * Rewrite unit tests to use lime2
+      * search method no longer returns an Apache_Solr_Document, but a php array instead
     </notes>
   </release>
   </changelog>
