update documentation to relate last patch changes

--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -61,6 +61,7 @@
       * Refactor some code, and split the tests files
       * Rewrite unit tests to use lime2
       * search method no longer returns an Apache_Solr_Document, but a php array instead
+      * seach can now take extra params to pass to Solr
     </notes>
   </release>
   </changelog>
