update package file before release

--- a/package.xml.tmpl
+++ b/package.xml.tmpl
@@ -45,6 +45,27 @@
   <changelog>
   <release>
     <version>
+      <release>1.0.1</release>
+      <api>1.0.1</api>
+    </version>
+    <stability>
+     <release>stable</release>
+     <api>stable</api>
+    </stability>
+    <license uri="http://www.symfony-project.org/license">MIT license</license>
+    <date>2011-01-03</date>
+    <notes>
+      * I18n integration
+      * Configure Solr and Jetty logging
+      * Realtime indexing option
+      * DataImportHandler (DIH) configuration
+      * Task to rebuild index
+      * Update documentation
+      * Bug corrections
+    </notes>
+  </release>
+  <release>
+    <version>
       <release>1.0.0</release>
       <api>1.0.0</api>
     </version>
